# FFT

./: .gitignore  CMakeLists.txt  README.md  Timer.cpp  Timer.hpp  benchmark.cpp  benchmark.hpp  distributed.cpp  distributed.hpp  generate.cpp  main.cpp  parallel.cpp  parallel.hpp  persistence.cpp  persistence.hpp  sequential.cpp  sequential.hpp  tmp.cpp
